tests/errors/match_no_match.dang
# This should fail: no matching case and no wildcard
pub result = match (5) with {
  1 -> "one"
  2 -> "two"
}
